# FastMediaShare

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  tools.cpp  tools.h
src/server/: server.cpp  server.h  server_handler.cpp  server_handler.h
